@@ -34,7 +34,7 @@
 #endif
 
 #define TILP_REQUIRES_LIBCABLES_VERSION	"0.1.4"
-#define TILP_REQUIRES_LIBCALCS_VERSION 	"0.2.6"
+#define TILP_REQUIRES_LIBCALCS_VERSION 	"0.2.8"
 #define TILP_REQUIRES_LIBFILES_VERSION	"0.2.7"
 #define TILP_REQUIRES_LIBCONV_VERSION	"0.0.5"
 
